Add third test case